force-app/main/default/objects/Screening_Question__c/Screening_Question__c.object-meta.xml
<CustomObject>
    <label>Screening Question</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Screening Question #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screening Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>