force-app/main/default/objects/Screening_Question__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Screening Questions</relationshipLabel>
    <relationshipName>Screening_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>