force-app/main/default/objects/Screening_Question__c/fields/Provider_DOB__c.field-meta.xml
<CustomField>
    <fullName>Provider_DOB__c</fullName>
    <label>Provider DOB</label>
    <type>Date</type>
</CustomField>