force-app/main/default/objects/Screening_Question__c/fields/Total_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Questions__c</fullName>
    <label>Total # of Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>